digital_detox_companion/react_server.log

> react-kavia@0.1.0 start
> cross-env EDIT_MODE=true webpack serve --config .ve/webpack.config.js --mode development

<i> [webpack-dev-server] Project is running at:
<i> [webpack-dev-server] Loopback: http://localhost:3000/, http://[::1]:3000/
<i> [webpack-dev-server] On Your Network (IPv4): http://172.17.0.2:3000/
<i> [webpack-dev-server] Content not from webpack is served from './public' directory
Injecting EditorRootWrapper import: ../.ve/EditorRootWrapper
asset bundle.js 1.63 MiB [emitted] (name: main)
asset index.html 1.92 KiB [emitted]
runtime modules 27.5 KiB 14 modules
cacheable modules 1.45 MiB
  modules by path ./node_modules/ 1.24 MiB 31 modules
  modules by path ./src/ 202 KiB
    modules by path ./src/*.js 194 KiB 14 modules
    modules by path ./src/*.css 8.07 KiB
      ./src/index.css 2.23 KiB [built] [code generated]
      + 3 modules
  modules by path ./.ve/ 15.1 KiB
    modules by path ./.ve/*.js 10.6 KiB 2 modules
    modules by path ./.ve/*.css 2.93 KiB
      ./.ve/EditorOverlay.css 2.25 KiB [built] [code generated]
      ./node_modules/css-loader/dist/cjs.js!./.ve/EditorOverlay.css 697 bytes [built] [code generated]
    ./.ve/EditorOverlay.jsx 1.58 KiB [built] [code generated]
webpack 5.99.9 compiled successfully in 2130 ms
assets by status 1.92 KiB [cached] 1 asset
assets by path *.js 1.69 MiB
  asset bundle.js 1.64 MiB [emitted] (name: main)
  asset main.1d65ef9ce0a7317d5f4e.hot-update.js 48.9 KiB [emitted] [immutable] [hmr] (name: main)
asset main.1d65ef9ce0a7317d5f4e.hot-update.json 28 bytes [emitted] [immutable] [hmr]
Entrypoint main 1.69 MiB = bundle.js 1.64 MiB main.1d65ef9ce0a7317d5f4e.hot-update.js 48.9 KiB
cached modules 1.42 MiB [cached] 53 modules
runtime modules 27.5 KiB 14 modules
javascript modules 35.8 KiB
  ./src/App.js 27.7 KiB [built] [code generated]
  ./src/AIChat.js 8.03 KiB [built] [code generated]
webpack 5.99.9 compiled successfully in 283 ms
assets by status 1.92 KiB [cached] 1 asset
assets by path *.js 1.39 MiB
  asset bundle.js 1.38 MiB [emitted] (name: main)
  asset main.a48f4cfe2ce22f811a2d.hot-update.js 6.68 KiB [emitted] [immutable] [hmr] (name: main)
asset main.a48f4cfe2ce22f811a2d.hot-update.json 449 bytes [emitted] [immutable] [hmr]
Entrypoint main 1.39 MiB = bundle.js 1.38 MiB main.a48f4cfe2ce22f811a2d.hot-update.js 6.68 KiB
cached modules 1.26 MiB [cached] 38 modules
runtime modules 27.5 KiB 14 modules
javascript modules 569 bytes
  ./src/index.js 530 bytes [code generated]
  ./src/App.js 39 bytes [built] [code generated] [1 error]

ERROR in ./src/App.js
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/src/App.js: Identifier 'AIChat' has already been declared. (618:7)

  616 | }
  617 |
> 618 | import AIChat from "./AIChat";
      |        ^
  619 |
  620 | // ----------- JOURNAL PAGE -----------
  621 | // PUBLIC_INTERFACE
    at constructor (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:363:19)
    at JSXParserMixin.raise (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:6609:19)
    at ScopeHandler.checkRedeclarationInScope (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:1626:19)
    at ScopeHandler.declareName (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:1592:12)
    at JSXParserMixin.declareNameFromIdentifier (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:7538:16)
    at JSXParserMixin.checkIdentifier (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:7534:12)
    at JSXParserMixin.checkLVal (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:7475:12)
    at JSXParserMixin.finishImportSpecifier (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:14184:10)
    at JSXParserMixin.parseImportSpecifierLocal (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:14181:31)
    at JSXParserMixin.maybeParseDefaultImportSpecifier (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:14288:12)
    at JSXParserMixin.parseImportSpecifiersAndAfter (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:14157:29)
    at JSXParserMixin.parseImport (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:14153:17)
    at JSXParserMixin.parseStatementContent (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:12795:27)
    at JSXParserMixin.parseStatementLike (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:12685:17)
    at JSXParserMixin.parseModuleItem (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:12662:17)
    at JSXParserMixin.parseBlockOrModuleBlockBody (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:13235:36)
    at JSXParserMixin.parseBlockBody (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:13228:10)
    at JSXParserMixin.parseProgram (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:12541:10)
    at JSXParserMixin.parseTopLevel (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:12531:25)
    at JSXParserMixin.parse (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:14410:10)
    at parse (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/parser/lib/index.js:14444:38)
    at parser (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/core/lib/transformation/normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/core/lib/transformation/index.js:22:50)
    at run.next (<anonymous>)
    at transform (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/@babel/core/lib/transform.js:22:33)
    at transform.next (<anonymous>)
    at step (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/gensync/index.js:261:32)
    at /home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/gensync/index.js:273:13
    at async.call.result.err.err (/home/kavia/workspace/code-generation/digital-detox-companion-38961-cbc97790/digital_detox_companion/node_modules/gensync/index.js:223:11)
 @ ./src/index.js 5:0-24 11:32-35

webpack 5.99.9 compiled with 1 error in 46 ms
assets by status 1.92 KiB [cached] 1 asset
assets by path *.js 1.91 MiB
  asset bundle.js 1.64 MiB [emitted] (name: main)
  asset main.8203607f88ab970928cf.hot-update.js 271 KiB [emitted] [immutable] [hmr] (name: main)
asset main.8203607f88ab970928cf.hot-update.json 28 bytes [emitted] [immutable] [hmr]
Entrypoint main 1.91 MiB = bundle.js 1.64 MiB main.8203607f88ab970928cf.hot-update.js 271 KiB
cached modules 1.43 MiB [cached] 53 modules
runtime modules 27.5 KiB 14 modules
javascript modules 28.3 KiB
  ./src/index.js 530 bytes [code generated]
  ./src/App.js 27.7 KiB [built] [code generated]
webpack 5.99.9 compiled successfully in 160 ms
